# pulser

./: Cargo.toml  critical_improvements.txt  output.txt  readme.md
common/: Cargo.toml
common/src/: error.rs  lib.rs  price_feed.rs  storage.rs  task_manager.rs  types.rs  utils.rs  wallet_sync.rs  wallet_utils.rs
common/src/error/: context.rs  convert.rs  mod.rs  types.rs
common/src/health/: checker.rs  mod.rs
common/src/health/providers/: blockchain.rs  mod.rs  price_feed.rs  redis.rs  websocket.rs
common/src/price_feed/: aggregator.rs  cache.rs  deribit.rs  http_sources.rs  mod.rs  price_feed.rs  websocket.rs
common/src/price_feed/hedging/: futures.rs  mod.rs  options.rs
common/src/price_feed/sources/: binance.rs  bitfinex.rs  deribit.rs  kraken.rs  mod.rs
common/src/webhook/: config.rs  delivery.rs  mod.rs  retry.rs
common/src/websocket/: mod.rs
data_lsp/user_1/: user_1_public.json
data_lsp/user_2/: user_2_public.json
deposit-service/: Cargo.toml  config.rs  deposit_notification.txt  user_recovery.txt  user_seed.txt  wallet.rs  webhook.rs
deposit-service/config/: service_config.toml
deposit-service/data/: price_history.json  wallet_1.db
deposit-service/data/secrets/: user_1_key.json
deposit-service/data/wallets/: active_descriptor.txt
deposit-service/data/wallets/lsp/: seed
deposit-service/data/wallets/trustee/: seed
deposit-service/data/wallets/user1/: seed
deposit-service/data_lsp/: service_status.json
deposit-service/data_lsp/user_1/: stable_chain_1.json  status_1.json  user_1_public.json
deposit-service/data_lsp/user_2/: activity_2.json  stable_chain_2.json  status_2.json  user_2_public.json
deposit-service/data_lsp/user_3/: activity_3.json  stable_chain_3.json  status_3.json  user_3_public.json
deposit-service/data_lsp/user_4/: stable_chain_4.json  user_4_public.json
deposit-service/data_lsp/user_5/: stable_chain_5.json  user_5_public.json
deposit-service/data_lsp/user_6/: stable_chain_6.json  user_6_public.json
deposit-service/data_lsp/user_7/: stable_chain_7.json  user_7_public.json
deposit-service/examples/: test_miniscript.rs  test_multisig_deposit.rs  test_txgraph.rs  test_wallet.rs
deposit-service/src/: api.rs  blockchain.rs  config.rs  handlers.rs  init_pulser_wallet.rs  integration.rs  keys.rs  lib.rs  main.rs  monitor.rs  monitoring.rs  secure_storage.rs  storage.rs  task_manager.rs  test_taproot.rs  types.rs  wallet.rs  wallet_backup.rs  wallet_init.rs  wallet_newbackup.rs  webhook.rs
deposit-service/src/api/: health.rs  mod.rs  register.rs  service.rs  status.rs  sync.rs  user.rs
deposit-service/src/archive/: deposit_monitor.rs  handlers.rs  wallet_experimental.rs
deposit-service/test_data/: user1_desc.txt  user1_secret.txt  user2_desc.txt  user2_secret.txt
deposit-service/test_data/secrets/: trustee_key.json
hedge-service/: Cargo.toml
hedge-service/config/: service_config.toml
hedge-service/src/: ai_agent.rs  exchange.rs  hedge_monitor.rs  hedging.rs  lib.rs  state.rs
src/: apply_changeset.rs  keys.rs  lib.rs  main.rs  monitor.rs  wallet.rs
src/api/: sync.rs  user.rs
test_data/secrets/: lsp_key.json  user_1_key.json
tools/key-generator/: Cargo.toml
tools/key-generator/src/: main.rs
withdraw-service/: Cargo.toml
withdraw-service/src/: withdraw.rs
