[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
bitcoin = { version = "0.30.2", features = ["serde", "rand"] }

# Error handling
thiserror = "1.0.57"
actix-web = { version = "4.4.1", features = ["macros"] }

# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"

# Async/HTTP
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4.20"
sha2 = "0.10.8"
hex = "0.4.3"
