[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
bitcoin = { version = "0.32.5", features = ["serde", "rand"] } # Updated from 0.30.2
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json", "native-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
sha2 = "0.10.8"
thiserror = "1.0.69"
bdk_esplora = { version = "0.20.1", features = ["async-https", "tokio"] }
bdk_file_store = "0.18.1"
aes-gcm = "0.10"
rand = "0.8"
bdk_wallet = { version = "1.1.0", features = ["keys-bip39"] }
miniscript = "12.0.0"
bdk_chain = "0.21.1"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] } # Includes JSON support
tokio = { version = "1.36.0", features = ["time", "rt-multi-thread"] }
lazy_static = "1.4"
warp = "0.3" 
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"  # Add this if missing
bincode = "1.3"

# Add the missing dependencies
async-trait = "0.1.77"
hmac = "0.12.1"
redis = { version = "0.29.3", features = ["tokio-comp"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
futures = "0.3"
