[package]
name = "deposit-service"
version = "0.1.0"
edition = "2021"

[features]
user = []
lsp = []
trustee = []

# BDK Wallet and dependencies
[dependencies]
bdk_wallet = { version = "1.1.0", features = ["keys-bip39"] } # For Mnemonic
bdk_file_store = "0.18.1" 
bdk_esplora = { version = "0.20.1", features = ["async-https", "tokio"] }
bdk_chain = "0.21.1"

# Bitcoin dependencies
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
miniscript = "12.0.0"

# For cryptography
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.21.5"
aes-gcm = "0.10"

# Async and HTTP/APIf
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4.4.1"
reqwest = { version = "0.11.24", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
getrandom = { version = "0.2", features = ["js"] }  # Add this or update existing



# Serialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"

# Logging
log = "0.4.20"
env_logger = "0.10.1"
thiserror = "1.0"

# Common library
common = { path = "../common" }

[dev-dependencies]
tempdir = "0.3.7"
