[package]
name = "hedge-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = "0.4"
common = { path = "../common" }
deposit-service = { path = "../deposit-service" } # Keep this
