[package]
name = "withdraw-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_wallet = { version = "1.1.0", features = ["keys-bip39"] }
bdk_file_store = "0.18.1" 
bdk_esplora = { version = "0.20.1", features = ["async-https", "tokio"] }
bdk_chain = "0.21.1"
common = { path = "../common" }
deposit-service = { path = "../deposit-service" } # For StableChain
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
log = "0.4"
